1.增加共用樣式2.套用vee-validate

--- a/src/assets/css/form_Common.css
+++ b/src/assets/css/form_Common.css
@@ -919,4 +919,12 @@
   .modal .btn-close:focus{
     box-shadow: none;
   }
+  .is-invalid {
+    border-color: #db0031;
+    background-image: none;
+  }
+  .invalid-feedback {
+    color: #db0031;
+    font-size: 1em !important;
+  }
   /*--//modal--*/
