(1.設定blur觸發驗證(2.樣式調整及路由埋設

--- a/src/assets/css/form_Common.css
+++ b/src/assets/css/form_Common.css
@@ -926,5 +926,10 @@
   .invalid-feedback {
     color: #db0031;
     font-size: 1em !important;
-  }
+}
+@media(max-width:768px) {
+.invalid-feedback{
+    font-size: 0.8em !important;
+}
+}
   /*--//modal--*/
