--- a/src/assets/css/OnLineApply.css
+++ b/src/assets/css/OnLineApply.css
@@ -54,9 +54,9 @@
             font-size: 40px;
         }
     }
-    
+
 /*----------------------------//頁面主標題----------------------------------*/
-    
+
 /*--------------------------------yesgogogo------------------------------------*/
 .yesgogogo_box {
     border: 1px solid #d8d8d8;
@@ -119,7 +119,7 @@
 /*--//修改bootstrap手風琴--*/
 /*--------------------------------//yesgogogo------------------------------------*/
 /*-----------------------------------線上辦卡-----------------------------------*/
-.formList.formApply label {    
+.formList.formApply label {
     min-width: 11.5rem;
 }
 .formList.formApply .formApply_form_control {
@@ -149,8 +149,8 @@
     border: 2px solid #c6c6c6;
     border-radius: 20px;
     padding: 5rem 2rem;
-    margin-bottom: .75rem;    
-    transform: translateY(0);    
+    margin-bottom: .75rem;
+    transform: translateY(0);
     transition: all .5s;
 }
 
@@ -181,12 +181,12 @@
 }
 
 .Apply_Box .item:hover {
-    border: 2px solid #c6c6c6;   
+    border: 2px solid #c6c6c6;
     transform: translateY(-10px);
     box-shadow: 10px 10px 0 0 rgba(200, 200, 200, 0.6);
 }
 
-.Apply_Box .item:hover .btn {   
+.Apply_Box .item:hover .btn {
     box-shadow: 5px 5px 0 0 rgba(200, 200, 200, 0.8);
 }
 
@@ -238,7 +238,7 @@
     }
 }
 /*--//我是聯邦卡友 我不是聯邦卡友--*/
-/*--藍色邊框--*/   
+/*--藍色邊框--*/
 .blue_box {
     border: 6px solid #40a0a0;
     padding-left: 0px;
@@ -277,7 +277,7 @@
 .dashed_line {
     border-bottom: 1px dashed #40a0a0;
 }
-/*--表單中變更按鈕--*/    
+/*--表單中變更按鈕--*/
 .OnLineApply_button {
     display: inline-block;
     margin: 0 0 8px 5px;
@@ -338,7 +338,7 @@
 .card-header:after {
     content: " ▼ ";
     display: inline-block;
-    float: right;
+    /* float: right; */
     transform: rotate(0deg);
     transition: .15s;
 }
@@ -401,7 +401,7 @@
     width: 80px;
 }
 @media screen and (max-width: 768px) {
-   
+
     .apply_address .ZIP,
     .apply_address .Area {
         width: 160px;
@@ -413,18 +413,18 @@
     .other_input {
         width: 100%;
     }
-} 
+}
 @media screen and (max-width: 480px) {
     .apply_address .ZIP,
     .apply_address .Area {
         width: 120px;
     }
 }
-/*--//申請人資料--*/  
-/*--他行卡--*/    
+/*--//申請人資料--*/
+/*--他行卡--*/
 .Apply_Chk label {
     width: 9em;
-} 
+}
 .formList.Apply_Chk .Apply_Chk_form_control {
     width: 20.1rem;
 }
@@ -443,10 +443,10 @@
 }
 /*--其他銀行帳戶--*/
 .Apply_ChkSZ label {
-    width: 7.5rem; 
-} 
+    width: 7.5rem;
+}
 .Apply_ChkSZ .form-control {
-    min-width: 19.6rem; 
+    min-width: 19.6rem;
 }
 
 .Apply_ChkSZ select.form-select {
@@ -455,14 +455,14 @@
 }
 /*--//其他銀行帳戶--*/
 /*--//他行卡--*/
-/*--線上辦卡資料確認--*/    
+/*--線上辦卡資料確認--*/
 .group_confirm {
-    display: flex;   
+    display: flex;
     flex-direction: column;
 }
 
-.group_confirm li {   
-    display: flex;    
+.group_confirm li {
+    display: flex;
     align-items: center;
     margin-bottom: 2rem;
 }
@@ -497,7 +497,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .group_confirm li {       
+    .group_confirm li {
         justify-content: flex-start;
         flex-wrap: wrap;
         margin-bottom: 2rem;
@@ -513,7 +513,7 @@
 }
 /*--//線上辦卡資料確認--*/
 /*-- MyData--*/
-    
+
 .MyData_modal_dialog {
     max-width: 600px;
     margin: 1.75rem auto;
@@ -583,7 +583,7 @@
     background-color: #009999;
     line-height: 1;
 }
-.MyData-modal-btn:hover, 
+.MyData-modal-btn:hover,
 .MyData-modal-btn-y:hover {
     background: #393e46 !important;
     color: #fff;
@@ -618,7 +618,7 @@
 }
 
 .termsDetial-indent {
-    list-style: none;   
+    list-style: none;
 }
 
 .termsDetial-indent li {
@@ -646,7 +646,7 @@
 }
 /*--//MyData--*/
 /*--首刷禮--*/
-    
+
 .card_gift_box {
     padding: 10px 20px 0;
 }
@@ -681,228 +681,264 @@
     text-indent: -0.6em;
 }
 /*--//首刷禮--*/
-/*--fee--*/    
-.fee_box {
-    border: 1px solid #dadbdc;
-    background-color: #f5f3f3;
-    border-radius: 8px;
-    padding: 20px 10px;
-}
-
+/*--fee--*/
 .fee_box h3 {
-    color: #115b83;
-    font-size: 15pt;
-    line-height: 1.5em;
-    font-weight: 600;
+  color: #115b83;
+  font-size: 15pt;
+  line-height: 1.5em;
+  font-weight: 600;
 }
 
 .fee_box h3 img {
-    vertical-align: baseline;
+  vertical-align: baseline;
 }
 
-.fee_content {
-    border: 1px solid #cdcdcd;
-    background-color: #ffffff;
-    padding: 10px;
+.fee_box table {
+  width: 100%;
+  border: 1px solid #D9D9D9;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: 15px;
+  line-height: 1.8;
+  color: #323232;
 }
+.fee_box th {
+  color: #fff;
+  background-color: #1BBBBB;
+  border: 1px solid #D9D9D9;
+  word-wrap: break-word;
+  padding: 10px 0px;
+  text-align: center;
+  vertical-align: middle;
+}
+.fee_box td {
+  border: 1px solid #D9D9D9;
+  padding: 10px;
+  vertical-align: top;
+  text-align: center;
+  vertical-align: middle;
+}
+.fee_box .oddWhite tr:nth-child(odd) {
+  background: #FFFFFF;
+}
+.fee_box .oddWhite tr:nth-child(even) {
+  background: #F2F2F2;
+  }
 
-.fee_table th,
-.fee_table td {
-    padding: 3px;
-    border: 1px solid #a1bbbd;
-    vertical-align: middle;
-}
-
-.fee_table thead {
-    background-color: #e9f4f4;
-    line-height: 2;
-}
-
-.fee_table {
-    text-align: center;
-    line-height: 1.6;
-    vertical-align: middle;
-    border-width: 1px;
-    border-color: #ddd;
-    padding: 10px;
-}
-
-.fee_cardname {
-    color: #097171;
-}
-
-.fee_table .fee_thead {
-    background-color: #fffde5;
-    line-height: 1.6;
-}
-
-@media screen and (max-width: 768px) {
-    .fee_box {
-        padding: 10px 5px;
-    }
-    .fee_content {
-        padding: 5px;
-    }
-    .fee_table thead th {
-        font-size: 14px;
-    }
-    .fee_table td,
-    .fee_table td p {
-        font-size: 14px;
-    }
-    .fee_table {
-        line-height: 1.5;
-    }
-}
 /*--//fee--*/
-/*--非卡友--*/    
+/*--非卡友--*/
 .not_UBfriend .item {
-    background: #ffffff;
-    border: 2px solid #c6c6c6;
-    border-radius: 20px;
-    padding: 5rem 2rem;
-    margin-bottom: .75rem;    
-    transform: translateY(0);    
-    transition: all .5s;
+  background: #ffffff;
+  border: 2px solid #c6c6c6;
+  border-radius: 20px;
+  padding: 2.5rem  0rem 1.5rem 0rem;
+  margin-bottom: .75rem;
+  transform: translateY(0);
+  transition: all .5s;
+  height: 141px;
+  height: 210px;
 }
 
 .not_UBfriend .item h3 {
-    font-size: 24px;
-    color: #707070;
-    font-weight: 800;
-    line-height: 45px;
+  font-size: 24px;
+  color: #707070;
+  font-weight: 800;
+  line-height: 45px;
 }
 
 .not_UBfriend .item h4 {
-    display: inline-block;
-    font-size: 14px;
-    color: #707070;
-    line-height: 20px;
-    text-indent: -1em;
-    padding-left: 1em;
-    margin-top: 10px;
+  display: inline-block;
+  font-size: 14px;
+  color: #707070;
+  line-height: 20px;
+  text-indent: -1em;
+  padding-left: 1em;
+  margin-top: 10px;
 }
 
 .not_UBfriend .item .btn {
-    font-size: 24px;
-    padding: 2px 20px;
-    -webkit-transition: all .5s;
-    -o-transition: all .5s;
-    transition: all .5s;
+  font-size: 24px;
+  padding: 2px 20px;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
 }
 
 .not_UBfriend .item:hover {
-    border: 2px solid #c6c6c6;   
-    transform: translateY(-10px);
-    box-shadow: 10px 10px 0 0 rgba(200, 200, 200, 0.6);
+  border: 2px solid #c6c6c6;
+  transform: translateY(-10px);
+  box-shadow: 10px 10px 0 0 rgba(200, 200, 200, 0.6);
 }
 
-.not_UBfriend .item:hover .btn {   
-    box-shadow: 5px 5px 0 0 rgba(200, 200, 200, 0.8);
+.not_UBfriend .item:hover .btn {
+  box-shadow: 5px 5px 0 0 rgba(200, 200, 200, 0.8);
 }
 @media screen and (max-width: 992px) {
-    .not_UBfriend .item .btn {
-        font-size: 20px;   
-    }
+  .not_UBfriend .item .btn {
+      font-size: 20px;
+  }
 }
 @media screen and (max-width: 576px) {
-    .not_UBfriend .item {
-        padding: 2rem 1rem;
-    }
-    .not_UBfriend .item h3 {
-        line-height: 40px;
-    }
-    .not_UBfriend .item .btn {
-        font-size: 22px;
-        padding: 2px 20px;
-    }
+  .not_UBfriend .item {
+      padding: 2rem 1rem;
+      height: auto;
+  }
+  .not_UBfriend .item h3 {
+      line-height: 40px;
+  }
+  .not_UBfriend .item .btn {
+      font-size: 22px;
+      padding: 2px 20px;
+  }
 }
 /*--//非卡友--*/
 /*--------------------------------//線上辦卡------------------------------------*/
 
-/*------上傳附件-------*/    
+/*------上傳附件-------*/
 .upload_title {
-    color: #FFFFFF;
-    font-size: 19pt;
-    background-color: #009999;
-    border-radius: 50px;
-    border: 1px solid #009999;
-    max-width: 350px;
-    margin: 0 auto 30px;
-    line-height: 28pt;
-    text-align: center;
+  color: #FFFFFF;
+  font-size: 19pt;
+  background-color: #009999;
+  border-radius: 50px;
+  border: 1px solid #009999;
+  max-width: 350px;
+  margin: 0 auto 30px;
+  line-height: 28pt;
+  text-align: center;
 }
 
 .upload_note_indent {
-    color: #ff0000;
-    margin-left: 0.95rem;
-    text-indent: -0.95rem;
+  color: #ff0000;
+  margin-left: 0.95rem;
+  text-indent: -0.95rem;
 }
 
 .upload_group {
-    border-radius: 10px;
-    border: 2px solid #CECECE;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 0 auto 60px;
-    padding: 20px;
+  border-radius: 10px;
+  border: 2px solid #CECECE;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0 auto 60px;
+  padding: 20px;
 }
 
 .upload_group .Apply_input {
-    width: 1.3rem;
-    height: 1.3rem;
+  width: 1.3rem;
+  height: 1.3rem;
 }
 
 .upload_group .form-check-label {
-    font-size: 1.3rem;
-    line-height: 24px;
-    margin-left: 5px;
+  font-size: 1.3rem;
+  line-height: 24px;
+  margin-left: 5px;
 }
 
 .upload_group .upload_items {
-    position: relative;
-    border-radius: 7px;
-    border: 2px solid #118da2;
-    overflow: hidden;
+  position: relative;
+  border-radius: 7px;
+  border: 2px solid #118da2;
+  overflow: hidden;
 }
 
 .upload_group .upload_IDtxt {
-    color: #969696;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.8;
-    padding: 10PX;
+  color: #969696;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.8;
+  padding: 10PX;
 }
 
 .upload_group .upload_group_title {
-    color: #2a99ab;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.8;
-    padding: 10PX;
+  color: #2a99ab;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.8;
+  padding: 10PX;
 }
 
 .upload_group .upload_txt {
-    color: #323232;
-    font-size: 13px;
+  color: #323232;
+  font-size: 13px;
 }
 
 .upload_group .upload {
-    position: absolute;
-    left: 0;
-    top: -40px;
-    bottom: 0;
-    right: 0;
-    cursor: pointer;
-    opacity: 0;
+  position: absolute;
+  left: 0;
+  top: -40px;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+  opacity: 0;
 }
 .upload_group textarea {
-    display: none;
+  display: none;
 }
-/*------//上傳附件-------*/  
-/*--------條款中的表格---------------*/
+/*------//上傳附件-------*/
+/*------條款中的表格------*/
 .modal .table > :not(caption) > * > * {
-    padding: 0.1rem 0.1rem;
-    }
-/*--------//條款中的表格---------------*/
+  padding: 0.1rem 0.1rem;
+  }
+/*------//條款中的表格------*/
+/*--------------------------------OCR------------------------------------*/
+/*--上傳身分證--*/
+.IDupload_group {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0px auto;
+  padding: 20px;
+}
+
+.IDupload_group .upload_items {
+  position: relative;
+  border-radius: 10px;
+  border: 2px solid #CECECE;
+  padding: 30px;
+  margin-bottom: 30px;
+  overflow: hidden;
+}
+
+.IDupload_group .upload_IDtxt {
+  color: #969696;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.8;
+  padding: 10PX;
+}
+
+.IDupload_group .upload {
+  position: absolute;
+  left: 0;
+  top: -40px;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+  opacity: 0;
+}
+.IDupload_group textarea {
+  display: none;
+}
+/*--//上傳身分證--*/
+.modal-title.OnLineApply {
+  font-size: 26px;
+}
+/*--------------------------------OCR------------------------------------*/
+/*--縮排星號--*/
+.indentNote_star {
+  font-size: 15px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  text-align: left;
+  line-height: 2.3em;
+}
+
+.indentNote_star p {
+  font-size: 15px;
+  text-align: left;
+  padding-left: 12px;
+  text-indent: -12px;
+  margin-bottom: 0px;
+}
+/*--//縮排星號--*/
