--- a/src/assets/css/OnLineApply.css
+++ b/src/assets/css/OnLineApply.css
@@ -135,12 +135,14 @@
     border: 1px solid #a9a9a9;
 }
 .formList-even .form-text {
-    font-size: 20px;
-    letter-spacing: 2px;
-    background-color: #eeeeee;
-    padding: 0.2rem 0.5rem;
-    width: 100%;
-    border: 1px solid #a9a9a9;
+  font-size: 20px;
+  line-height: 1.75;
+  letter-spacing: 2px;
+  background-color: #eeeeee;
+  padding: 0.2rem 0.5rem;
+  width: 100%;
+  border: 1px solid #a9a9a9;
+  margin-top: 0;
 }
 /*--//表單帶出不可修改的文字資料--*/
 /*--我是聯邦卡友 我不是聯邦卡友--*/
@@ -648,17 +650,17 @@
 /*--首刷禮--*/
 
 .card_gift_box {
-    padding: 10px 20px 0;
+  padding: 0 20px 20px;
 }
 
 .card_gift_box::before {
-    content: "";
+    /* content: "";
     display: block;
     width: 100%;
     height: 30px;
     background-image: url(../images/form/tks_message_line.gif);
     margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 15px; */
 }
 
 .card_gift_box h3 {
