--- a/src/assets/css/OnLineApply.css
+++ b/src/assets/css/OnLineApply.css
@@ -338,7 +338,7 @@
 .card-header:after {
     content: " ▼ ";
     display: inline-block;
-    /* float: right; */
+    float: right;
     transform: rotate(0deg);
     transition: .15s;
 }
