--- a/src/assets/css/form_Common.css
+++ b/src/assets/css/form_Common.css
@@ -89,101 +89,7 @@
         }
     }
 
-    /* 版面配置 Start */
-    .header {
-        height: 20px;
-    }
 
-    /* 聯邦LOGO Start */
-    .navbar-brand {
-        padding-right: 0;
-    }
-
-    .navbar {
-        padding: 0;
-    }
-
-    .navbar .navbar-brand {
-        margin-right: 0px;
-        margin-left: 20px;
-        width: 180px;
-        height: 60px;
-        background: url(../images/UBOT_logo_180x26.png) no-repeat 0 50%;
-    }
-
-    /* 聯邦LOGO End */
-    /* footer Start */
-    .footer {
-        font-size: 15px;
-    }
-
-    .footer .securityNotice {
-
-        /* color:#FFFFFF; */
-        /* color:#4C4C4C; */
-        color: #666;
-        text-align: center;
-        /* background-color: #1BBBBB; */
-        /* background-color: #D0D0D0; */
-        background-color: #fff;
-        padding: 10px 10px 20px;
-    }
-
-    .footer .serviceItems {
-        color: #4C4C4C;
-        text-align: center;
-        background-color: #D0D0D0;
-        padding: 10px;
-    }
-
-    .footer .serviceItems .links ul {
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
-        margin-bottom: 0;
-    }
-
-    .footer .links a:after {
-        content: "｜";
-    }
-
-    .footer .links a:last-child:after {
-        content: "";
-    }
-
-    .footer .serviceItems a {
-        color: #4C4C4C;
-    }
-
-    .footer .information {
-        color: #FFFFFF;
-        background-color: #575757;
-        padding: 10px;
-    }
-
-    .footer .information .infoLeft {
-        font-size: 28px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer .information .infoRight {
-        font-size: 12px;
-    }
-
-    @media all and (max-width: 576px) {
-        .footer .information .infoRight {
-            display: flex;
-            justify-content: center;
-        }
-    }
-
-    .footer .information .copyright {
-        text-align: center;
-    }
-
-    /* footer End */
 
     /*--主要內容 mainArea--*/
     .mainArea {
@@ -249,7 +155,7 @@
         display: block;
         width: 100%;
         height: 30px;
-        background-image: url("~@/assets/images/form/tks_message_line.gif");
+        background-image: url("../images/form/tks_message_line.gif");
         margin-top: 15px;
         margin-bottom: 15px;
     }
@@ -416,7 +322,7 @@
     background-color: #145686;
 }
 .formList .inOpt .countdown {
-    font-size: 14px;
+    font-size: 15px;
     color: #4C4C4C;
     font-weight: 400;
 }
@@ -919,17 +825,4 @@
   .modal .btn-close:focus{
     box-shadow: none;
   }
-  .is-invalid {
-    border-color: #db0031;
-    background-image: none;
-  }
-  .invalid-feedback {
-    color: #db0031;
-    font-size: 1em !important;
-}
-@media(max-width:768px) {
-.invalid-feedback{
-    font-size: 0.8em !important;
-}
-}
   /*--//modal--*/
